fix: add nowrap property for profile text fields

--- a/blocks/profile/__job/profile__job.css
+++ b/blocks/profile/__job/profile__job.css
@@ -7,6 +7,7 @@
   font-size: 18px;
   line-height: 1.22;
   text-overflow: ellipsis;
+  white-space: nowrap;
   overflow: hidden;
 }
 
