--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -7,6 +7,7 @@
   line-height: 1.14;
 
   text-overflow: ellipsis;
+  white-space: nowrap;
   overflow: hidden;
 }
 
